# hinotori-cli

./: .gitmodules  CMakeLists.txt  README.md
src/: commandlineinterface.cpp  commandlineinterface.h  main.cpp
